[project]
name = "renderizado-plantillas-html"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "jinja2>=3.1.6",
    "pdf2docx>=0.5.13",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "flasgger>=0.9.7.1",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Selecciona las reglas: 
# E = pycodestyle, F = Pyflakes, I = isort (ordenar imports)
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
# Usa comillas dobles (estilo Black)
quote-style = "double"
# Indentación con espacios
indent-style = "space"
